fix inactive links not showing up as grey in IE7 and IE8

--- a/emas/theme/static/css/styles.css
+++ b/emas/theme/static/css/styles.css
@@ -1294,7 +1294,7 @@ input.sign-in.homebutton {
     *display: inline;
 }
 
-.textbook-row a:not([href]) {
+.textbook-row a.greyed-out {
     color: #717981;
 }
 
